<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stemningsloggen</string>
    <string name="menu_settings">Innstillinger</string>
    <string name="title_activity_sleep_log">God morgen!</string>
    <string name="sleep_log_explanation">Hvor lenge har du sovet?</string>
    <string name="choose_number_of_hours">Velg antall timer:</string>
    <string name="settings">Innstillinger</string>
    <string name="save">Lagre</string>
    <string name="title_activity_medicine_log">Medisinvarsel og logger</string>
    <string name="medicine_explanation">Det er på tide å ta medisin. Hak av for medisiner når eller om du tar dem. Har du endret medisinering, kan du endre dette under \&quot;innstillinger\&quot;.</string>
    <string name="medicines_at">Medisiner klokken </string>
    <string name="title_activity_text_and_image_log">Dagens tekst og bilder</string>
    <string name="title_activity_debug_main">DebugMainActivity</string>
    <string name="title_activity_edit_today">Rediger dagens data</string>
    <string name="today_data">Data for i dag:</string>
    <string name="sleep_colon">Søvn i timer:</string>
    <string name="data_of_today">Dagens data:</string>
    <string name="sleep_log_time">Tid for logging av søvn</string>
    <string name="title_activity_settings">Innstillinger</string>
    <string name="prefs_time_sleepLog_default">09:00</string>
    <string name="prefs_logTimes">Tider for logging</string>
    <string name="text_explanation_toggle_notifications">Knappen under slår av og på applikasjonen:</string>
    <string name="title_activity_main">Hovedskjerm</string>
    <string name="title_activity_evening">EveningActivity</string>
    <string name="action_settings">Innstillinger</string>
    <string name="evening_explanation">Logg dagens humør, triggere og dagbok på disse skjermene</string>
    <string name="next_screen">Neste skjerm</string>
    <string name="previous_screen">Forrige skjerm</string>
    <string name="mood">Humør:</string>
    <string name="moodScale1">Alvorlig depresjon</string>
    <string name="moodScale2">Høyt moderat depresjon</string>
    <string name="moodScale3">Lavt moderat depresjon</string>
    <string name="moodScale4">Mild depresjon</string>
    <string name="moodScale5">Normalt humør</string>
    <string name="moodScale6">Eufori</string>
    <string name="moodScale7">Lavt hypoman</string>
    <string name="moodScale8">Høyt hypoman</string>
    <string name="moodScale9">Alvorlig mani</string>
    <string name="high">Høy:</string>
    <string name="low">Lav:</string>
    <string name="title_activity_triggers_diary">TriggersDiaryActivity</string>
    <string name="triggers_explanation">Skriv inn eventuelle ord for triggere under:</string>
    <string name="diary_explanation">Her kan du føre dagbok om du ønsker det eller skrive litt om dagen:</string>
    <string name="evening_log_time">Tid for logging av humør (kveld)</string>
    <string name="prefs_time_eveningLog_default">21:00</string>
    <string name="prefs_connection">Tilkobling</string>
    <string name="prefs_temporary">Lagre lokalt om ikke tilkoblet</string>
    <string name="prefs_temporary_summary">Om du ikke har tilgang til internett idet du skal logge, så kan applikasjonen
        ta vare på dataene for deg og sende dem når du kommer på nett igjen</string>
    <string name="prefs_server_uri">Adresse til tjener</string>
    <string name="title_activity_evening_summary">EveningSummaryActivity</string>
    <string name="username">Brukernavn</string>
    <string name="password">Passord</string>
    <string name="authenticate">Autentiser</string>
    <string name="dialog_username_not_set">Brukernavn er ikke satt. Du vil bli bragt til innstillinger hvor du kan sette inn dette.</string>
	<string name="ok">OK</string>
	<string name="webinterface">Webgrensesnitt</string>
	<string name="is_for_date">Gjelder for dato:</string>
	<string name="log_sleep">Logg søvn</string>
	<string name="log_evening">Logg humør (og resten)</string>
</resources>