<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefs_logTimes" >
        <no.perandersen.moodclient.guiwidgets.TimePreference
            android:defaultValue="@string/prefs_time_sleepLog_default"
            android:key="time_sleepLog"
            android:title="@string/sleep_log_time" />
        <no.perandersen.moodclient.guiwidgets.TimePreference
            android:defaultValue="@string/prefs_time_eveningLog_default"
            android:key="time_eveningLog"
            android:title="@string/evening_log_time" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_connection" >
        <EditTextPreference 
            android:key="connection_username"
            android:title="@string/username"
            android:defaultValue=""/>
        <EditTextPreference 
            android:key="connection_password"
            android:title="@string/password"
            android:inputType="textPassword" 
            android:defaultValue=""/>        
        <CheckBoxPreference 
            android:key="connection_temporary_data"
            android:title="@string/prefs_temporary"
            android:summary="@string/prefs_temporary_summary"
            android:defaultValue="true"
            />
        <EditTextPreference 
            android:key="connection_server_uri"
            android:title="@string/prefs_server_uri"
            android:defaultValue="http://thresher.uib.no"/>
    </PreferenceCategory>

</PreferenceScreen>