<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MoodActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/smile" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="31dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/evening_explanation" />

    <LinearLayout
        android:id="@+id/groupForRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/mood" />

    <TextView
        android:id="@+id/maxValText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/minValText"
        android:layout_centerVertical="true"
        android:text="@string/moodScale9" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/minValText"
        android:layout_alignLeft="@+id/groupForRange"
        android:layout_toLeftOf="@+id/textView1"
        android:text="@string/low"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/minValText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/groupForRange"
        android:layout_marginTop="22dp"
        android:text="@string/moodScale1" />

    <Button
        android:id="@+id/nextButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="nextButtonClick"
        android:text="@string/next_screen" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/maxValText"
        android:layout_alignBottom="@+id/maxValText"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/high"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>